Internationalization for Element and Point types

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -62,5 +62,140 @@
     "th2FileEditPageZoomOutFile": "Mostrar arquivo (3)",
     "th2FileEditPageZoomOutScrap": "Mostrar croqui (4)",
     "th2FileEditPageZoomToSelection": "Mostrar seleção (2)",
-    "th2FilePickSelectTH2File": "Selecione um arquivo TH2"
+    "th2FilePickSelectTH2File": "Selecione um arquivo TH2",
+    "thElementArea": "Área",
+    "thElementAreaBorderTHID": "ID de borda de área",
+    "thElementBezierCurveLineSegment": "Segmento de linha Bézier",
+    "thElementComment": "Comentário",
+    "thElementEmptyLine": "Linha vazia",
+    "thElementEncoding": "Codificação",
+    "thElementEndArea": "Fim de área",
+    "thElementEndComment": "Fim de comentário",
+    "thElementEndLine": "Fim de linha",
+    "thElementEndScrap": "Fim de croqui",
+    "thElementLine": "Linha",
+    "thElementLineSegment": "Segmento de linha",
+    "thElementMultilineCommentContent": "Conteúdo de comentário multilinha",
+    "thElementMultilineComment": "Comentário multilinha",
+    "thElementPoint": "Ponto",
+    "thElementScrap": "Croqui",
+    "thElementStraightLineSegment": "Segmento de linha reta",
+    "thElementUnrecognized": "Elemento não reconhecido",
+    "thElementXTherionConfig": "Configuração XTherion",
+    "thPointAirDraught": "Corrente de ar",
+    "thPointAltar": "Altar",
+    "thPointAltitude": "Altitude",
+    "thPointAnastomosis": "Anastomose",
+    "thPointAnchor": "Âncora",
+    "thPointAragonite": "Aragonita",
+    "thPointArcheoExcavation": "Escavação arqueológica",
+    "thPointArcheoMaterial": "Material arqueológico",
+    "thPointAudio": "Áudio",
+    "thPointBat": "Morcego",
+    "thPointBedrock": "Rocha matriz",
+    "thPointBlocks": "Blocos",
+    "thPointBones": "Ossos",
+    "thPointBreakdownChoke": "Bloqueio de desmoronamento",
+    "thPointBridge": "Ponte",
+    "thPointCamp": "Acampamento",
+    "thPointCavePearl": "Pérola de caverna",
+    "thPointClay": "Argila",
+    "thPointClayChoke": "Bloqueio de argila",
+    "thPointClayTree": "Árvore de argila",
+    "thPointContinuation": "Continuação",
+    "thPointCrystal": "Cristal",
+    "thPointCurtain": "Cortina",
+    "thPointCurtains": "Cortinas",
+    "thPointDanger": "Perigo",
+    "thPointDate": "Data",
+    "thPointDebris": "Detritos",
+    "thPointDig": "Escavação",
+    "thPointDimensions": "Dimensões",
+    "thPointDiscPillar": "Pilar de disco",
+    "thPointDiscPillars": "Pilares de disco",
+    "thPointDiscStalactite": "Estalactite de disco",
+    "thPointDiscStalactites": "Estalactites de disco",
+    "thPointDiscStalagmite": "Estalagmite de disco",
+    "thPointDiscStalagmites": "Estalagmites de disco",
+    "thPointDisk": "Disco",
+    "thPointElectricLight": "Luz elétrica",
+    "thPointEntrance": "Entrada",
+    "thPointExtra": "Extra",
+    "thPointExVoto": "Ex-voto",
+    "thPointFixedLadder": "Escada fixa",
+    "thPointFlowstone": "Travertino",
+    "thPointFlowstoneChoke": "Bloqueio de travertino",
+    "thPointFlute": "Flauta",
+    "thPointGate": "Portão",
+    "thPointGradient": "Gradiente",
+    "thPointGuano": "Guano",
+    "thPointGypsum": "Gesso",
+    "thPointGypsumFlower": "Flor de gesso",
+    "thPointHandrail": "Corrimão",
+    "thPointHeight": "Altura",
+    "thPointHelictite": "Helictite",
+    "thPointHelictites": "Helictites",
+    "thPointHumanBones": "Ossos humanos",
+    "thPointIce": "Gelo",
+    "thPointIcePillar": "Pilar de gelo",
+    "thPointIceStalactite": "Estalactite de gelo",
+    "thPointIceStalagmite": "Estalagmite de gelo",
+    "thPointKarren": "Karren",
+    "thPointLabel": "Rótulo",
+    "thPointLowEnd": "Extremidade baixa",
+    "thPointMapConnection": "Conexão de mapa",
+    "thPointMasonry": "Alvenaria",
+    "thPointMoonmilk": "Leite de lua",
+    "thPointMud": "Lama",
+    "thPointMudcrack": "Rachadura de lama",
+    "thPointNamePlate": "Placa de nome",
+    "thPointNarrowEnd": "Extremidade estreita",
+    "thPointNoEquipment": "Sem equipamento",
+    "thPointNoWheelchair": "Sem cadeira de rodas",
+    "thPointPaleoMaterial": "Material paleontológico",
+    "thPointPassageHeight": "Altura da passagem",
+    "thPointPebbles": "Seixos",
+    "thPointPendant": "Pendente",
+    "thPointPhoto": "Foto",
+    "thPointPillar": "Pilar",
+    "thPointPillarsWithCurtains": "Pilares com cortinas",
+    "thPointPillarWithCurtains": "Pilar com cortinas",
+    "thPointPopcorn": "Popcorn",
+    "thPointRaft": "Balsa",
+    "thPointRaftCone": "Cone de balsa",
+    "thPointRemark": "Observação",
+    "thPointRimstoneDam": "Dique de travertino",
+    "thPointRimstonePool": "Piscina de travertino",
+    "thPointRoot": "Raiz",
+    "thPointRope": "Corda",
+    "thPointRopeLadder": "Escada de corda",
+    "thPointSand": "Areia",
+    "thPointScallop": "Escalope",
+    "thPointSection": "Seção",
+    "thPointSeedGermination": "Germinação de sementes",
+    "thPointSink": "Pia",
+    "thPointSnow": "Neve",
+    "thPointSodaStraw": "Canudo de refrigerante",
+    "thPointSpring": "Fonte",
+    "thPointStalactite": "Estalactite",
+    "thPointStalactites": "Estalactites",
+    "thPointStalactitesStalagmites": "Estalactites e estalagmites",
+    "thPointStalactiteStalagmite": "Estalactite e estalagmite",
+    "thPointStalagmite": "Estalagmite",
+    "thPointStalagmites": "Estalagmites",
+    "thPointStation": "Estação",
+    "thPointStationName": "Nome da estação",
+    "thPointSteps": "Degraus",
+    "thPointTraverse": "Travessia",
+    "thPointTreeTrunk": "Tronco de árvore",
+    "thPointU": "U",
+    "thPointVegetableDebris": "Detritos vegetais",
+    "thPointViaFerrata": "Via Ferrata",
+    "thPointVolcano": "Vulcão",
+    "thPointWalkway": "Passarela",
+    "thPointWallCalcite": "Calcita de parede",
+    "thPointWater": "Água",
+    "thPointWaterDrip": "Gotejamento de água",
+    "thPointWaterFlow": "Fluxo de água",
+    "thPointWheelchair": "Cadeira de rodas"
 }
