--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -239,5 +239,57 @@
   "thLineViaFerrata": "Via Ferrata",
   "thLineWalkWay": "Passarela",
   "thLineWall": "Parede",
-  "thLineWaterFlow": "Fluxo de Água"
+  "thLineWaterFlow": "Fluxo de Água",
+
+  "thCommandOptionAdjust": "Ajustar",
+  "thCommandOptionAlign": "Alinhar",
+  "thCommandOptionAltitude": "Altitude",
+  "thCommandOptionAltitudeValue": "Altitude",
+  "thCommandOptionAnchors": "Âncoras",
+  "thCommandOptionAuthor": "Autor",
+  "thCommandOptionBorder": "Borda",
+  "thCommandOptionClip": "Recortar",
+  "thCommandOptionClose": "Fechar",
+  "thCommandOptionContext": "Contexto",
+  "thCommandOptionCopyright": "Direitos Autorais",
+  "thCommandOptionCs": "CS",
+  "thCommandOptionDateValue": "Data",
+  "thCommandOptionDimensionsValue": "Dimensões",
+  "thCommandOptionDist": "Distância",
+  "thCommandOptionExplored": "Explorado",
+  "thCommandOptionExtend": "Estender",
+  "thCommandOptionFlip": "Virar",
+  "thCommandOptionFrom": "De",
+  "thCommandOptionHead": "Cabeça",
+  "thCommandOptionId": "ID",
+  "thCommandOptionLineDirection": "Direção",
+  "thCommandOptionLineGradient": "Gradiente",
+  "thCommandOptionLineHeight": "Altura",
+  "thCommandOptionLinePointDirection": "Direção",
+  "thCommandOptionLinePointGradient": "Gradiente",
+  "thCommandOptionLineScale": "Escala",
+  "thCommandOptionLSize": "Tamanho L",
+  "thCommandOptionMark": "Marca",
+  "thCommandOptionName": "Nome",
+  "thCommandOptionOutline": "Contorno",
+  "thCommandOptionOrientation": "Orientação",
+  "thCommandOptionPassageHeightValue": "Altura da Passagem",
+  "thCommandOptionPlace": "Lugar",
+  "thCommandOptionPointHeightValue": "Altura do Ponto",
+  "thCommandOptionPointScale": "Escala",
+  "thCommandOptionProjection": "Projeção",
+  "thCommandOptionRebelays": "Rebelays",
+  "thCommandOptionReverse": "Reverter",
+  "thCommandOptionScrap": "Sucata",
+  "thCommandOptionScrapScale": "Escala",
+  "thCommandOptionSketch": "Esboço",
+  "thCommandOptionSmooth": "Suavizar",
+  "thCommandOptionStationNames": "Nomes das estações",
+  "thCommandOptionStations": "Estações",
+  "thCommandOptionSubtype": "Subtipo",
+  "thCommandOptionText": "Texto",
+  "thCommandOptionTitle": "Título",
+  "thCommandOptionUnrecognizedCommandOption": "Opção de Comando Não Reconhecida",
+  "thCommandOptionVisibility": "Visibilidade",
+  "thCommandOptionWalls": "Paredes"
 }
