--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -11,28 +11,33 @@
   "initialPagePresentation": "Mapiah: uma interface gráfica amigável para mapeamento de cavernas com Therion",
   "fileEditWindowWindowTitle": "Edição de arquivo",
   "languageName": "{language, select, sys {Sistema} en {English} pt {Português} other {Desconhecido}}",
-  "mpAddElementsCommandDescription": "Adicionar elementos",
-  "mpAddLineCommandDescription": "Adicionar linha",
-  "mpAddLineSegmentCommandDescription": "Adicionar segmento de linha",
-  "mpAddPointCommandDescription": "Adicionar ponto",
-  "mpDeleteElementsCommandDescription": "Apagar elementos",
-  "mpDeleteLineCommandDescription": "Apagar linha",
-  "mpDeleteLineSegmentCommandDescription": "Apagar segmento de linha",
-  "mpDeletePointCommandDescription": "Apagar ponto",
-  "mpEditBezierCurveCommandDescription": "Editar curva Bézier",
-  "mpEditLineCommandDescription": "Editar linha",
-  "mpEditLineSegmentCommandDescription": "Editar segmento de linha",
+
+  "mpCommandDescriptionAddElements": "Adicionar elementos",
+  "mpCommandDescriptionAddLine": "Adicionar linha",
+  "mpCommandDescriptionAddLineSegment": "Adicionar segmento de linha",
+  "mpCommandDescriptionAddPoint": "Adicionar ponto",
+  "mpCommandDescriptionDeleteElements": "Apagar elementos",
+  "mpCommandDescriptionDeleteLine": "Apagar linha",
+  "mpCommandDescriptionDeleteLineSegment": "Apagar segmento de linha",
+  "mpCommandDescriptionDeletePoint": "Apagar ponto",
+  "mpCommandDescriptionEditBezierCurve": "Editar curva Bézier",
+  "mpCommandDescriptionEditLine": "Editar linha",
+  "mpCommandDescriptionEditLineSegment": "Editar segmento de linha",
+  "mpCommandDescriptionMoveBezierLineSegment": "Mover segmento de linha Bézier",
+  "mpCommandDescriptionMoveElements": "Mover elementos",
+  "mpCommandDescriptionMoveLine": "Mover linha",
+  "mpCommandDescriptionMovePoint": "Mover ponto",
+  "mpCommandDescriptionMoveStraightLineSegment": "Mover segmento de linha reta",
+  "mpCommandDescriptionUndoOf": "Desfazer '{description}'",
+
   "mpLengthUnitCentimeterAbbreviation": "cm",
   "mpLengthUnitFootAbbreviation": "ft",
   "mpLengthUnitInchAbbreviation": "in",
   "mpLengthUnitMeterAbbreviation": "m",
   "mpLengthUnitYardAbbreviation": "yd",
-  "mpMoveBezierLineSegmentCommandDescription": "Mover segmento de linha Bézier",
-  "mpMoveElementsCommandDescription": "Mover elementos",
-  "mpMoveLineCommandDescription": "Mover linha",
-  "mpMovePointCommandDescription": "Mover ponto",
-  "mpMoveStraightLineSegmentCommandDescription": "Mover segmento de linha reta",
+
   "parsingErrors": "Erros na interpretação do arquivo",
+
   "th2FileEditPageAddArea": "Criar área (A)",
   "th2FileEditPageAddAreaStatusBarMessage": "Clique para criar uma área do tipo {type}",
   "th2FileEditPageAddElementOptions": "Criar elemento",
