--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -47,12 +47,14 @@
   "th2FileEditPageChangeActiveScrapTool": "Alterar croqui ativo (Alt+C)",
   "th2FileEditPageDeleteButton": "Apagar (Del)",
   "th2FileEditPageEmptySelectionStatusBarMessage": "Nenhum elemento selecionado",
+  "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
+  "th2FileEditPageNodeEditTool": "Editar nós (N)",
   "th2FileEditPageNonEmptySelectionOnlyLinesStatusBarMessage": "{amount} linha(s) selecionadas",
   "th2FileEditPageNonEmptySelectionOnlyPointsStatusBarMessage": "{amount} pontos(s) selecionados",
   "th2FileEditPageNonEmptySelectionPointsAndLinesStatusBarMessage": "{pointsAmount} pontos(s) e {linesAmount} linhas(s) selecionados",
-  "th2FileEditPageLoadingFile": "Lendo arquivo {filename} ...",
   "th2FileEditPageNoUndoAvailable": "Nenhuma ação para desfazer",
   "th2FileEditPageNoRedoAvailable": "Nenhuma ação para refazer",
+  "th2FileEditPageOptionTool": "Opções (O)",
   "th2FileEditPagePanTool": "Mover ponto de vista",
   "th2FileEditPageSave": "Salvar (Ctrl+S)",
   "th2FileEditPageSaveAs": "Salvar como (Shift+Ctrl+S)",
